--- a/TestNgProject2/test-output/old/Default suite/methods.html
+++ b/TestNgProject2/test-output/old/Default suite/methods.html
@@ -1,6 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8764ef">  <td>24/04/21 11:48:40</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EditAcc.EditAccTest()[pri:0, instance:selenium_testng.EditAcc@50ad3bc1]">EditAccTest</td> 
-  <td>main@1450652220</td>   <td></td> </tr>
+<tr bgcolor="b4c3a9">  <td>24/04/27 10:56:44</td>   <td>0</td> <td title="&gt;&gt;BaseTest.initBrowser()[pri:0, instance:pom.AccountLoginTest@2fb3536e]">&gt;&gt;initBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1403700359</td>   <td></td> </tr>
+<tr bgcolor="b4c3a9">  <td>24/04/27 10:56:51</td>   <td>7022</td> <td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:pom.AccountLoginTest@2fb3536e]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1403700359</td>   <td></td> </tr>
+<tr bgcolor="8764ef">  <td>24/04/27 10:56:49</td>   <td>5752</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountLoginTest.tc_1234_LoginTest()[pri:0, instance:pom.AccountLoginTest@2fb3536e]">tc_1234_LoginTest</td> 
+  <td>main@1403700359</td>   <td></td> </tr>
 </table>
