--- a/TestNgProject2/test-output/old/Suite/methods-alphabetical.html
+++ b/TestNgProject2/test-output/old/Suite/methods-alphabetical.html
@@ -1,8 +1,28 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b6aecc">  <td>24/04/21 11:14:30</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ListenerTestClass.TestCase1()[pri:0, instance:pack1.ListenerTestClass@2dde1bff]">TestCase1</td> 
-  <td>main@1383178166</td>   <td></td> </tr>
-<tr bgcolor="b6aecc">  <td>24/04/21 11:14:30</td>   <td>24</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ListenerTestClass.TestCase2()[pri:0, instance:pack1.ListenerTestClass@2dde1bff]">TestCase2</td> 
-  <td>main@1383178166</td>   <td></td> </tr>
+<tr bgcolor="a9766d">  <td>24/04/27 09:19:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ListenerTestClass.AfterClass()[pri:0, instance:pack1.ListenerTestClass@6cd28fa7]">&lt;&lt;AfterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1894369629</td>   <td></td> </tr>
+<tr bgcolor="a9766d">  <td>24/04/27 09:19:36</td>   <td>138</td> <td title="&lt;&lt;ListenerTestClass.AfterSuite()[pri:0, instance:pack1.ListenerTestClass@6cd28fa7]">&lt;&lt;AfterSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1894369629</td>   <td></td> </tr>
+<tr bgcolor="a9766d">  <td>24/04/27 09:19:36</td>   <td>5</td> <td>&nbsp;</td><td title="&lt;&lt;ListenerTestClass.AfterTest()[pri:0, instance:pack1.ListenerTestClass@6cd28fa7]">&lt;&lt;AfterTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1894369629</td>   <td></td> </tr>
+<tr bgcolor="a9766d">  <td>24/04/27 09:19:36</td>   <td>-2</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ListenerTestClass.Aftermethod()[pri:0, instance:pack1.ListenerTestClass@6cd28fa7]">&lt;&lt;Aftermethod</td> 
+<td>&nbsp;</td>  <td>main@1894369629</td>   <td></td> </tr>
+<tr bgcolor="a9766d">  <td>24/04/27 09:19:36</td>   <td>-2</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ListenerTestClass.Aftermethod()[pri:0, instance:pack1.ListenerTestClass@6cd28fa7]">&lt;&lt;Aftermethod</td> 
+<td>&nbsp;</td>  <td>main@1894369629</td>   <td></td> </tr>
+<tr bgcolor="a9766d">  <td>24/04/27 09:19:36</td>   <td>-53</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ListenerTestClass.BeforeClass()[pri:0, instance:pack1.ListenerTestClass@6cd28fa7]">&gt;&gt;BeforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1894369629</td>   <td></td> </tr>
+<tr bgcolor="a9766d">  <td>24/04/27 09:19:36</td>   <td>-84</td> <td title="&gt;&gt;ListenerTestClass.BeforeSuite()[pri:0, instance:pack1.ListenerTestClass@6cd28fa7]">&gt;&gt;BeforeSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1894369629</td>   <td></td> </tr>
+<tr bgcolor="a9766d">  <td>24/04/27 09:19:36</td>   <td>-74</td> <td>&nbsp;</td><td title="&gt;&gt;ListenerTestClass.BeforeTest()[pri:0, instance:pack1.ListenerTestClass@6cd28fa7]">&gt;&gt;BeforeTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1894369629</td>   <td></td> </tr>
+<tr bgcolor="a9766d">  <td>24/04/27 09:19:36</td>   <td>-11</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ListenerTestClass.Beforemethod()[pri:0, instance:pack1.ListenerTestClass@6cd28fa7]">&gt;&gt;Beforemethod</td> 
+<td>&nbsp;</td>  <td>main@1894369629</td>   <td></td> </tr>
+<tr bgcolor="a9766d">  <td>24/04/27 09:19:36</td>   <td>-11</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ListenerTestClass.Beforemethod()[pri:0, instance:pack1.ListenerTestClass@6cd28fa7]">&gt;&gt;Beforemethod</td> 
+<td>&nbsp;</td>  <td>main@1894369629</td>   <td></td> </tr>
+<tr bgcolor="a9766d">  <td>24/04/27 09:19:36</td>   <td>-35</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ListenerTestClass.TestCase1()[pri:0, instance:pack1.ListenerTestClass@6cd28fa7]">TestCase1</td> 
+  <td>main@1894369629</td>   <td></td> </tr>
+<tr bgcolor="a9766d">  <td>24/04/27 09:19:36</td>   <td>-10</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ListenerTestClass.TestCase2()[pri:0, instance:pack1.ListenerTestClass@6cd28fa7]">TestCase2</td> 
+  <td>main@1894369629</td>   <td></td> </tr>
 </table>
