POM design pattern:  2 TC's created with basic annotations

--- a/TestNgProject2/test-output/old/Default suite/classes.html
+++ b/TestNgProject2/test-output/old/Default suite/classes.html
@@ -14,8 +14,16 @@
 <td>tc_1234_LoginTest</td>
 <td>&nbsp;</td></tr>
 <tr>
+<td>&nbsp;</td>
+<td>tc_1235_ForgotPassword</td>
+<td>&nbsp;</td></tr>
+<tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
+<tr>
+<td>&nbsp;</td>
+<td>initObjects</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
