--- a/TestNgPOM/test-output/old/Default suite/methods-alphabetical.html
+++ b/TestNgPOM/test-output/old/Default suite/methods-alphabetical.html
@@ -1,22 +1,22 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="90ad9c">  <td>24/04/28 11:37:27</td>   <td>0</td> <td title="&gt;&gt;BaseTest.initBrowser()[pri:0, instance:ecomm_TestSuite.MyAccountTestSuite@2b91004a]">&gt;&gt;initBrowser</td> 
+<tr bgcolor="90ad9c">  <td>24/05/11 12:35:30</td>   <td>0</td> <td title="&gt;&gt;BaseTest.initBrowser()[pri:0, instance:ecomm_TestSuite.MyAccountTestSuite@2b91004a]">&gt;&gt;initBrowser</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1944702768</td>   <td></td> </tr>
-<tr bgcolor="90ad9c">  <td>24/04/28 11:37:32</td>   <td>5202</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.initObjects()[pri:0, instance:ecomm_TestSuite.MyAccountTestSuite@2b91004a]">&gt;&gt;initObjects</td> 
+<tr bgcolor="90ad9c">  <td>24/05/11 12:35:42</td>   <td>11949</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.initObjects()[pri:0, instance:ecomm_TestSuite.MyAccountTestSuite@2b91004a]">&gt;&gt;initObjects</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1944702768</td>   <td></td> </tr>
-<tr bgcolor="90ad9c">  <td>24/04/28 11:37:51</td>   <td>24389</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.login()[pri:0, instance:ecomm_TestSuite.MyAccountTestSuite@2b91004a]">&gt;&gt;login</td> 
+<tr bgcolor="90ad9c">  <td>24/05/11 12:35:42</td>   <td>12069</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.login()[pri:0, instance:ecomm_TestSuite.MyAccountTestSuite@2b91004a]">&gt;&gt;login</td> 
 <td>&nbsp;</td>  <td>main@1944702768</td>   <td></td> </tr>
-<tr bgcolor="90ad9c">  <td>24/04/28 11:37:51</td>   <td>24389</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.login()[pri:0, instance:ecomm_TestSuite.MyAccountTestSuite@2b91004a]">&gt;&gt;login</td> 
+<tr bgcolor="90ad9c">  <td>24/05/11 12:35:42</td>   <td>12069</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.login()[pri:0, instance:ecomm_TestSuite.MyAccountTestSuite@2b91004a]">&gt;&gt;login</td> 
 <td>&nbsp;</td>  <td>main@1944702768</td>   <td></td> </tr>
-<tr bgcolor="90ad9c">  <td>24/04/28 11:37:58</td>   <td>31366</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.logout()[pri:0, instance:ecomm_TestSuite.MyAccountTestSuite@2b91004a]">&lt;&lt;logout</td> 
-<td>&nbsp;</td>  <td>main@1944702768</td>   <td></td> </tr>
-<tr bgcolor="90ad9c">  <td>24/04/28 11:37:58</td>   <td>31366</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.logout()[pri:0, instance:ecomm_TestSuite.MyAccountTestSuite@2b91004a]">&lt;&lt;logout</td> 
-<td>&nbsp;</td>  <td>main@1944702768</td>   <td></td> </tr>
-<tr bgcolor="7eb365">  <td>24/04/28 11:37:37</td>   <td>10182</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MyAccountTestSuite.tc_4567_EditAccountTest()[pri:0, instance:ecomm_TestSuite.MyAccountTestSuite@2b91004a]">tc_4567_EditAccountTest</td> 
+<tr bgcolor="90ad9c">  <td>24/05/11 12:35:42</td>   <td>12078</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.logout()[pri:0, instance:ecomm_TestSuite.MyAccountTestSuite@2b91004a]">&lt;&lt;logout</td> 
+<td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="90ad9c">  <td>24/05/11 12:35:42</td>   <td>12078</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.logout()[pri:0, instance:ecomm_TestSuite.MyAccountTestSuite@2b91004a]">&lt;&lt;logout</td> 
+<td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="7eb365">  <td>24/05/11 12:35:42</td>   <td>12039</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MyAccountTestSuite.tc_4567_EditAccountTest()[pri:0, instance:ecomm_TestSuite.MyAccountTestSuite@2b91004a]">tc_4567_EditAccountTest</td> 
   <td>main@1944702768</td>   <td></td> </tr>
-<tr bgcolor="7eb365">  <td>24/04/28 11:37:56</td>   <td>29059</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MyAccountTestSuite.tc_4568_EditAddrTest()[pri:0, instance:ecomm_TestSuite.MyAccountTestSuite@2b91004a]">tc_4568_EditAddrTest</td> 
+<tr bgcolor="7eb365">  <td>24/05/11 12:35:42</td>   <td>12069</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MyAccountTestSuite.tc_4568_EditAddrTest()[pri:0, instance:ecomm_TestSuite.MyAccountTestSuite@2b91004a]">tc_4568_EditAddrTest</td> 
   <td>main@1944702768</td>   <td></td> </tr>
-<tr bgcolor="90ad9c">  <td>24/04/28 11:38:01</td>   <td>34249</td> <td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:ecomm_TestSuite.MyAccountTestSuite@2b91004a]">&lt;&lt;tearDown</td> 
+<tr bgcolor="90ad9c">  <td>24/05/11 12:35:42</td>   <td>12183</td> <td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:ecomm_TestSuite.MyAccountTestSuite@2b91004a]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1944702768</td>   <td></td> </tr>
 </table>
