Added listeners in test ng to get proper data in extent report

--- a/TestNgPOM_OrangeHRM/test-output/old/Suite/classes.html
+++ b/TestNgPOM_OrangeHRM/test-output/old/Suite/classes.html
@@ -4,26 +4,22 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>ecomm_TestSuite.MyAccountTestSuite</td>
+<td>ecomm_TestSuite.ProfileIconTestSuite</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>tc_4567_EditAccountTest</td>
+<td>tc_4569_EditSupportClickTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>tc_4568_EditAddrTest</td>
+<td>tc_4568_EditPasswordTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
-<tr>
-<td>&nbsp;</td>
-<td>initObjects</td>
-<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
