--- a/TestNgPOM_OrangeHRM/test-output/old/Suite/methods-alphabetical.html
+++ b/TestNgPOM_OrangeHRM/test-output/old/Suite/methods-alphabetical.html
@@ -1,22 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="90ad9c">  <td>24/05/12 07:30:58</td>   <td>0</td> <td title="&gt;&gt;BaseTest.initBrowser()[pri:0, instance:ecomm_TestSuite.MyAccountTestSuite@2b91004a]">&gt;&gt;initBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1944702768</td>   <td></td> </tr>
-<tr bgcolor="90ad9c">  <td>24/05/12 07:31:49</td>   <td>51383</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.initObjects()[pri:0, instance:ecomm_TestSuite.MyAccountTestSuite@2b91004a]">&gt;&gt;initObjects</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1944702768</td>   <td></td> </tr>
-<tr bgcolor="90ad9c">  <td>24/05/12 07:32:00</td>   <td>61540</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.login()[pri:0, instance:ecomm_TestSuite.MyAccountTestSuite@2b91004a]">&gt;&gt;login</td> 
-<td>&nbsp;</td>  <td>main@1944702768</td>   <td></td> </tr>
-<tr bgcolor="90ad9c">  <td>24/05/12 07:32:00</td>   <td>61540</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.login()[pri:0, instance:ecomm_TestSuite.MyAccountTestSuite@2b91004a]">&gt;&gt;login</td> 
-<td>&nbsp;</td>  <td>main@1944702768</td>   <td></td> </tr>
-<tr bgcolor="90ad9c">  <td>24/05/12 07:32:00</td>   <td>61540</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.logout()[pri:0, instance:ecomm_TestSuite.MyAccountTestSuite@2b91004a]">&lt;&lt;logout</td> 
-<td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="90ad9c">  <td>24/05/12 07:32:00</td>   <td>61540</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.logout()[pri:0, instance:ecomm_TestSuite.MyAccountTestSuite@2b91004a]">&lt;&lt;logout</td> 
-<td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="7eb365">  <td>24/05/12 07:32:00</td>   <td>61525</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MyAccountTestSuite.tc_4567_EditAccountTest()[pri:1, instance:ecomm_TestSuite.MyAccountTestSuite@2b91004a]">tc_4567_EditAccountTest</td> 
-  <td>main@1944702768</td>   <td></td> </tr>
-<tr bgcolor="7eb365">  <td>24/05/12 07:32:00</td>   <td>61540</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MyAccountTestSuite.tc_4568_EditAddrTest()[pri:2, instance:ecomm_TestSuite.MyAccountTestSuite@2b91004a]">tc_4568_EditAddrTest</td> 
-  <td>main@1944702768</td>   <td></td> </tr>
-<tr bgcolor="90ad9c">  <td>24/05/12 07:32:00</td>   <td>61806</td> <td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:ecomm_TestSuite.MyAccountTestSuite@2b91004a]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1944702768</td>   <td></td> </tr>
+<tr bgcolor="9cabe1">  <td>24/05/18 12:46:12</td>   <td>0</td> <td title="&gt;&gt;BaseTest.initBrowser()[pri:0, instance:ecomm_TestSuite.ProfileIconTestSuite@ffaa6af]">&gt;&gt;initBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1187903677</td>   <td></td> </tr>
+<tr bgcolor="9cabe1">  <td>24/05/18 12:46:31</td>   <td>18831</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.login()[pri:0, instance:ecomm_TestSuite.ProfileIconTestSuite@ffaa6af]">&gt;&gt;login</td> 
+<td>&nbsp;</td>  <td>main@1187903677</td>   <td></td> </tr>
+<tr bgcolor="9cabe1">  <td>24/05/18 12:46:31</td>   <td>18831</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.login()[pri:0, instance:ecomm_TestSuite.ProfileIconTestSuite@ffaa6af]">&gt;&gt;login</td> 
+<td>&nbsp;</td>  <td>main@1187903677</td>   <td></td> </tr>
+<tr bgcolor="9cabe1">  <td>24/05/18 12:46:34</td>   <td>22336</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.logout()[pri:0, instance:ecomm_TestSuite.ProfileIconTestSuite@ffaa6af]">&lt;&lt;logout</td> 
+<td>&nbsp;</td>  <td>main@1187903677</td>   <td></td> </tr>
+<tr bgcolor="9cabe1">  <td>24/05/18 12:46:34</td>   <td>22336</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.logout()[pri:0, instance:ecomm_TestSuite.ProfileIconTestSuite@ffaa6af]">&lt;&lt;logout</td> 
+<td>&nbsp;</td>  <td>main@1187903677</td>   <td></td> </tr>
+<tr bgcolor="b6aecc">  <td>24/05/18 12:46:21</td>   <td>9500</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProfileIconTestSuite.tc_4568_EditPasswordTest()[pri:1, instance:ecomm_TestSuite.ProfileIconTestSuite@ffaa6af]">tc_4568_EditPasswordTest</td> 
+  <td>main@1187903677</td>   <td></td> </tr>
+<tr bgcolor="b6aecc">  <td>24/05/18 12:46:31</td>   <td>18831</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProfileIconTestSuite.tc_4569_EditSupportClickTest()[pri:2, instance:ecomm_TestSuite.ProfileIconTestSuite@ffaa6af]">tc_4569_EditSupportClickTest</td> 
+  <td>main@1187903677</td>   <td></td> </tr>
+<tr bgcolor="9cabe1">  <td>24/05/18 12:46:36</td>   <td>23893</td> <td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:ecomm_TestSuite.ProfileIconTestSuite@ffaa6af]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1187903677</td>   <td></td> </tr>
 </table>
